manifests/clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuber-service-clacterip
spec:
  selector:
    app: http-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
