manifests/deploy-svc-angular.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-v4
  labels:
    app: kuber-v4
spec:
  replicas: 2
  selector:
    matchLabels:
      app: angular-server-a
  template:
    metadata:
      labels:
        app: angular-server-a
    spec:
      containers:
      - name: kuber-app
        image: angular/ngcontainer
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kuber-service-v4
spec:
  selector:
    app: angular-server-a
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
