manifests/deploy-svc-eschool-v3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-v3
  labels:
    app: kuber-v3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eschool-server-v3
  template:
    metadata:
      labels:
        app: eschool-server-v3
    spec:
      containers:
      - name: kuber-app
        image: vadimtailor/eschool:1.3
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kuber-service-v3
spec:
  selector:
    app: eschool-server-v3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
