manifests/lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuber-service-lb
spec:
  externalTrafficPolicy: Local
  selector:
    app: eschool-server-v3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
