manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
    - host: eschool-v3.example.com
      http:
        paths:
          - pathType: Exact
            path: /
            backend:
              service:
                name: kuber-service-v3
                port:
                  number: 80
    - host: eschool-v4.example.com
      http:
        paths:
          - pathType: Exact
            path: /
            backend:
              service:
                name: kuber-service-v4
                port:
                  number: 80
    - host: app-v3.example.com
      http:
        paths:
          - pathType: Exact
            path: /
            backend:
              service:
                name: kuber-service
                port:
                  number: 80
